@@ -115,6 +115,7 @@
             Fix Serial port path regression on Linux, and add docs
             microbit: remove line-by-line debug capability to free up some space
             Added ES6 String.prototype.repeat
+            Fix issues with Class Extends
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
